# SAST-fp-filtering

./: README.md
deduplication/: config.py  minlsh.py  misc.py
miner/: README.md  diffgitjava.py  miner.py  pfpwarnfinder.py  pmd_stats.py  proj_stats.py  ptpwarnfinder.py  requirements.txt  skip.py  topcom.py
miner/MinHashLSH/: README.md  config.py  dedup_nascar.py  minlsh.py  pyproject.toml
miner/Miner-main/: AnalyzeReports.py  AnalyzeXmls.py  Decorator.py  Git.py  Logger.py  Maven.py  Parser.py  Spotbugs.py  Tests.py  Tracker.py  config_default  main.py  requirements.txt
miner/Miner-main/testInput/: repo_list.txt  repo_list2.txt
miner/commit_data/dubbo/: dubbo_commit_data_since_2024_01_01.json  dubbo_commit_result_since_2024_01_01.json
miner/diff_tool/: main.py  requirements.txt
miner/miner/: GitRemoteProgress.py  Project.py  Transformations.py  application.py  cadet.py  create_dataset.py  feeder.py  file_checker.py  pgenrep.py  pmd_main_bug_categories.csv  ruleset.xml  sfpwarnfinder.py  sgenrep.py  spotbugs_bug_types.csv  spotbugs_main_bug_categories.csv  spotbugs_stats.py  stpwarnfinder.py
miner/pipeline/: Dockerfile  pipeline.py  repo_list.txt
miner/tmp_TestRepo/code_chg/: code_change_368b17d_c810763.json  code_change_480a7f1_f432d12.json  code_change_6d51485_6d51485.json
miner/tmp_TestRepo/top_cmt/: top_cmt.json
miner/vfdetector_result/: dropwizard_jobs_commit_data.json  dropwizard_jobs_commit_result.json  dubbo_commit_data.json  dubbo_commit_result.json  open_refine_commit_data.json  open_refine_commit_result.json  result_1.json  result_2.json
(+177 files in other folders)
