[tool.poetry]
name = "minhashlsh"
version = "0.1.0"
description = ""
authors = ["Tamas Aladics <aladics@inf.u-szeged.hu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
datasketch = {extras = ["redis"], version = "^1.6.5"}
pandas = "^2.2.3"
pyarrow = "^18.0.0"
tqdm = "^4.66.6"
dask = {extras = ["distributed"], version = "^2024.10.0"}
dask-expr = "^1.1.16"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
